Moved to rollup and full TS setup

--- a/index.html
+++ b/index.html
@@ -100,7 +100,5 @@
     </div>
   </div>
 
-  <script src="src/pubsub.js"></script>
-  <script src="src/data.js"></script>
-  <script src="src/main.js"></script>
+  <script src="bundle.js"></script>
 </body>
